--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "main": "src/index.js",
   "dependencies": {
     "@iconify/iconify": "1.0.7",
+    "history": "5.0.0",
     "iconify": "1.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
