--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@iconify/iconify": "1.0.7",
+    "axios": "^0.21.1",
     "history": "5.0.0",
     "iconify": "1.3.0",
     "react": "17.0.1",
